[project]
name = "mcp-knox-token-client"
version = "0.1.0"
description = "Knox token client MCP server"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-knox-token-client = "server:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"